[package]
name = "icy-pendulum"
version = "0.1.0"
authors = ["William Lohrmann <willia2501@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3.0", features = ["canvas", "tokio", "debug"]}
chrono = "0.4"
